--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,8 @@
     <meta name="theme-color" content="#1a1a2e" />
     <meta name="description" content="Thought Threads - A brainstorming tool that visually connects your ideas" />
     <title>Thought Threads</title>
+    <meta name="author" content="Fatima" />
+    <meta name="copyright" content="© 2026 Fatima" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
