--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#1a1a2e" />
-    <meta name="description" content="Thought Threads - A brainstorming tool that visually connects your ideas" />
-    <title>Thought Threads</title>
+    <meta name="description" content="Skill Threads - Enter your skills and discover career paths that match your abilities" />
+    <title>Skill Threads</title>
     <meta name="author" content="Fatima" />
     <meta name="copyright" content="© 2026 Fatima" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
